# deeplocalizer

./: CMakeLists.txt  README.md  run_cmake.sh  wercker.yml
include/deeplocalizer/tagger/: DataWriter.h  Dataset.h  Image.h  ManuallyTagger.h  ManuallyTaggerWindow.h  PipelineWorker.h  ProposalGenerator.h  Tag.h  TrainDatum.h  TrainsetGenerator.h  WholeImageWidget.h  deeplocalizer_tagger.h  qt_helper.h  utils.h
source/: CMakeLists.txt
source/tagger/: CMakeLists.txt  DataWriter.cpp  Dataset.cpp  Image.cpp  ManuallyTagger.cpp  ManuallyTaggerWindow.cpp  PipelineWorker.cpp  ProposalGenerator.cpp  Tag.cpp  TrainDatum.cpp  TrainsetGenerator.cpp  WholeImageWidget.cpp  add_border.cpp  deeplocalizer_tagger.cpp  generate_dataset.cpp  gt_to_json.cpp  preprocess.cpp  tagger.cpp
test/: CMakeLists.txt  TestDataReaderWriter.cpp  TestImage.cpp  TestManuallyTagger.cpp  TestProposalGenerator.cpp  TestSerialization.cpp  TestTrainsetGenerator.cpp
test/scripts/: test_generate_dataset.sh  test_generate_proposals.sh  test_preprocess.sh
test/testdata/: CMakeLists.txt  tagger_images.txt
